# home.lab

./: .env.example  .gitattributes  .gitignore  CHANGELOG.md  CONTRIBUTING.md  CREDENTIALS.example.txt  DATA_SOURCES.md  LICENSE  Makefile  PSScriptAnalyzerSettings.psd1  README.md  bootstrap.sh  data-manifest.json  homelab.ps1  install.bat  mkdocs.yml  profile_backup.txt
ansible/: README.md  ansible.cfg  inventory.example.yml
configs/: README.md  settings.yaml  superchain-prometheus.yml
docker/: .env.example  docker-compose.agents.yml  docker-compose.arr.yml  docker-compose.base.yml  docker-compose.creative-local.yml  docker-compose.creative.yml  docker-compose.dev.yml  docker-compose.ev0.yml  docker-compose.experimental.yml  docker-compose.identity.yml  docker-compose.local-data.yml  docker-compose.matrix.yml  docker-compose.monitoring.yml  docker-compose.pihole.yml  docker-compose.pqtls.yml  docker-compose.quantum.yml  docker-compose.sdr.yml  docker-compose.secrets.yml  docker-compose.security-research.yml  docker-compose.sentry-mcp.yml  docker-compose.social.yml  docker-compose.superchain-local.yml  docker-compose.superchain.yml  docker-compose.vault.yml  docker-compose.windows.yml  docker-compose.yml
docs/: AGENTS.md  API.md  ARCHITECTURE.md  BASE.md  BASE_ECOSYSTEM.md  CREATIVE.md  EV0.md  EXPERIMENTAL.md  GITHUB_PROFILE.md  GITOPS.md  INSTALLATION.md  MAINTENANCE.md  MATRIX.md  PQTLS.md  PROXMOX.md  QUANTUM.md  README-FULL.md  REQUIREMENTS.md  RUNBOOKS.md  SDR.md  SECURITY-RESEARCH.md  SECURITY.md  ZFS.md  (+5 more)
miniapps/ev0/docker/agent/: Dockerfile  pyproject.toml
(+343 files in other folders)
