[tool.poetry]
name = "agent"
version = "0.1.0"
description = "x402 client agent"
authors = []
readme = "README.md"
packages = [{include = "agent", from = "src"}]

[tool.poetry.dependencies]
python = "^3.11"
# Core
pydantic = "^2.5.0"
httpx = "^0.26.0"
python-dotenv = "^1.0.0"

# x402 / Blockchain
viem = "^0.1.0"
eth-account = "^0.11.0"
web3 = "^6.15.0"

# AI / LLM
langchain = "^0.1.0"
langchain-community = "^0.0.20"
langchain-openai = "^0.0.5"
chromadb = "^0.4.22"
openai = "^1.12.0"

# Browser automation
playwright = "^1.41.0"
selenium = "^4.17.0"

# Server
fastapi = "^0.109.0"
uvicorn = "^0.27.0"

# Utilities
schedule = "^1.2.0"
structlog = "^24.1.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
pytest-asyncio = "^0.23.0"
black = "^24.1.0"
ruff = "^0.2.0"
mypy = "^1.8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
target-version = ['py311']

[tool.ruff]
line-length = 100
select = ["E", "F", "I", "N", "W", "UP"]

[tool.mypy]
python_version = "3.11"
strict = true
